--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Term_And_Condition"></activity>
-        <activity android:name=".Password" />
-        <activity android:name=".CodeVerification" />
-        <activity android:name=".AccessPhoneNumber" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Splash">
+        <activity android:name=".Activities.SignUp"></activity>
+        <activity android:name=".Activities.Term_And_Condition" />
+        <activity android:name=".Activities.SignIn" />
+        <activity android:name=".Activities.MainActivity" />
+        <activity android:name=".Activities.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
