--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.SignUp"></activity>
         <activity android:name=".Activities.Term_And_Condition" />
         <activity android:name=".Activities.SignIn" />
+        <activity android:name=".Activities.SignUp" />
         <activity android:name=".Activities.MainActivity" />
         <activity android:name=".Activities.Splash">
             <intent-filter>
