--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     //firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
