--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".Connection"
+        android:name=".Internet.Connection"
         android:allowBackup="true"
         android:icon="@mipmap/icon_ic_launcher_round"
         android:label="@string/app_name"
@@ -33,7 +33,7 @@
         </activity>
 
         <receiver
-            android:name=".ConnectivityReceiver"
+            android:name=".Internet.ConnectivityReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
