--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     //transition everywhere
     implementation "com.andkulikov:transitionseverywhere:2.1.0"
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
