--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //lottie animation
+    implementation 'com.airbnb.android:lottie:3.4.0'
+
 }
