--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.NoInternetConnection"></activity>
+        <activity android:name=".Activities.NoInternetConnection"/>
         <activity android:name=".Activities.CreateEvent" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
