--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
-
+    implementation 'androidx.palette:palette:1.0.0'
     //firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
@@ -62,8 +62,14 @@ dependencies {
     implementation "com.andkulikov:transitionseverywhere:2.1.0"
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     //lottie animation
     implementation 'com.airbnb.android:lottie:3.4.0'
+
+    //slider
+    implementation "com.github.bumptech.glide:glide:4.11.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.11.0"
+    implementation "com.github.firdausmaulan:GlideSlider:1.5.1"
 
 }
