--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Activities.LocationImage"/>
         <activity android:name=".Activities.NoInternetConnection"/>
         <activity android:name=".Activities.CreateEvent" />
         <activity
