--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
 
+    //HTTP request
+    implementation 'com.github.androdocs:Simple-HTTP-Request:v1.0'
+
     //image crop api
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
