--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    //auto complete
+    implementation("com.otaliastudios:autocomplete:1.1.0")
+
     //image color picker palette
     //noinspection GradleCompatible
     implementation 'com.android.support:palette-v7:28.0.0'
