--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,9 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:palette-v7:28.0.0'
 
+    //toasty
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
+
 
 
 }
