--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,5 +90,8 @@ dependencies {
     //toasty
     implementation 'com.github.GrenderG:Toasty:1.4.2'
 
+    implementation 'com.android.support:design:29.0.0'
+    implementation 'com.android.support:recyclerview-v7:29.0.0'
+
 
 }
