optimized event search and some bug fixes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,7 @@ dependencies {
 
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 
+    //radioButton
+    implementation 'com.github.patgdut:RadioRealButton:v2.1.2'
+
 }
