--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,9 +76,10 @@ dependencies {
     implementation "com.github.firdausmaulan:GlideSlider:1.5.1"
 
     //googleMap
-    implementation 'com.google.android.libraries.places:places:2.2.0'
+    implementation 'com.google.android.libraries.places:places:2.3.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
 
     //auto complete
     implementation("com.otaliastudios:autocomplete:1.1.0")
@@ -100,6 +101,5 @@ dependencies {
 
     //radioButton
     implementation 'com.github.patgdut:RadioRealButton:v2.1.2'
-
 
 }
