--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -80,6 +84,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
+    implementation 'com.google.maps:google-maps-services:0.14.0'
+    implementation 'org.slf4j:slf4j-simple:1.7.25'
 
     //auto complete
     implementation("com.otaliastudios:autocomplete:1.1.0")
@@ -101,5 +107,7 @@ dependencies {
 
     //radioButton
     implementation 'com.github.patgdut:RadioRealButton:v2.1.2'
+
+    implementation group: 'com.github.seratch', name: 'java-time-backport', version: '1.0.0'
 
 }
