--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.CommentsBox"
-            android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".Activities.CommentsBox"/>
         <activity android:name=".Activities.Map" />
         <activity android:name=".Activities.JoinMemberDetails" />
         <activity android:name=".Activities.EventDetails" />
