--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.maps:google-maps-services:0.14.0'
     implementation 'org.slf4j:slf4j-simple:1.7.25'
+    implementation 'com.google.maps.android:android-maps-utils:2.0.1'
 
     //auto complete
     implementation("com.otaliastudios:autocomplete:1.1.0")
