working on guide connection...

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,4 +124,6 @@ dependencies {
     //SmartMaterialSpinner
     implementation 'com.github.chivorns.androidx:smartmaterialspinner:1.2.1'
 
+    //implementation 'com.mcxiaoke.volley:library:1.0.19'
+
 }
