--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.CommentSettingsBottomSheet"></activity>
+        <activity android:name=".Activities.EditCommentActivity"></activity>
+        <activity android:name=".Activities.CommentSettingsBottomSheet" />
         <activity android:name=".Activities.ForgotPassword" />
         <activity android:name=".Activities.ReplyBox" />
         <activity android:name=".Activities.CommentsBox" />
