--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:name=".Internet.Connection"
@@ -23,7 +24,6 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.GuideChatBox"></activity>
         <activity android:name=".Activities.EditCommentActivity" />
-        <activity android:name=".Activities.CommentSettingsBottomSheet" />
         <activity android:name=".Activities.ForgotPassword" />
         <activity android:name=".Activities.ReplyBox" />
         <activity android:name=".Activities.CommentsBox" />
