--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.GuideChatBox"></activity>
+        <activity android:name=".Activities.GuideChatBox" />
         <activity android:name=".Activities.EditCommentActivity" />
+        <activity android:name=".Activities.EditReplyActivity" />
         <activity android:name=".Activities.ForgotPassword" />
         <activity android:name=".Activities.ReplyBox" />
         <activity android:name=".Activities.CommentsBox" />
