working in chat with guide and admin...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.GuideChatBox" />
+        <activity android:name=".Activities.AdminChatBox" />
         <activity android:name=".Activities.EditCommentActivity" />
         <activity android:name=".Activities.EditReplyActivity" />
         <activity android:name=".Activities.ForgotPassword" />
